# einherjarSDVX

./: .editorconfig  .gitignore  .gitmodules  BACKUPINFO.md  CMakeLists.txt  GenerateWin64ProjectFiles.bat  LICENSE.md  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml
Audio/bak Audio/src/: DSP.cpp
Audio/include/Audio/: Audio.hpp  AudioBase.hpp  AudioOutput.hpp  AudioStream.hpp  Audio_Impl.hpp  DSP.hpp  Sample.hpp
Audio/src/: Audio.cpp  Audio.cpp.bak  AudioBase.cpp  AudioStream.cpp  AudioStreamBase.cpp  AudioStreamBase.hpp  AudioStreamMa.cpp  AudioStreamMa.hpp  AudioStreamMp3.cpp  AudioStreamMp3.hpp  AudioStreamOgg.cpp  AudioStreamOgg.hpp  AudioStreamPcm.cpp  AudioStreamPcm.hpp  AudioStreamWav.cpp  AudioStreamWav.hpp  DSP.cpp  Sample.cpp
Audio/src/Unix/: AudioOutput_SDL.cpp
Audio/src/Windows/: AudioOutput_WASAPI.cpp
Beatmap/: CMakeLists.txt  stdafx.h
Beatmap/include/Beatmap/: AudioEffects.hpp  Beatmap.hpp  BeatmapObjects.hpp  BeatmapPlayback.hpp  Database.hpp  EffectTimeline.hpp  KShootMap.hpp  LineGraph.hpp  MapDatabase.hpp  PlaybackOptions.hpp  TinySHA1.hpp
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapObjects.cpp  BeatmapPlayback.cpp  ChallengeIndex.cpp  Database.cpp  EffectTimeline.cpp  KShootMap.cpp  LineGraph.cpp  MapDatabase.cpp  PlaybackOptions.cpp
GUI/: stdafx.h
GUI/include/GUI/: guiState.h  nanovg_ehj.h  nanovg_linAlg.h  nanovg_lua.h
Graphics/: stdafx.cpp
Graphics/include/Graphics/: Font.hpp  GL.hpp  Gamepad.hpp  Image.hpp  ImageLoader.hpp  Keys.hpp  Material.hpp  Mesh.hpp  MeshGenerators.hpp  OpenGL.hpp  ParticleEmitter.hpp  ParticleParameter.hpp  ParticleParameters.hpp  (+9 more)
Graphics/src/: Font.cpp  Gamepad_Impl.cpp  Gamepad_Impl.hpp  Image.cpp  ImageLoader.cpp  Material.cpp  Mesh.cpp  MeshGenerators.cpp  OpenGL.cpp  ParticleSystem.cpp  RenderQueue.cpp  ResourceManagers.cpp  Shader.cpp  SpriteMap.cpp  Texture.cpp  VertexFormat.cpp  Window.cpp
Main/: CMakeLists.txt  Resource.aps  Resource.rc  resource.h  stdafx.cpp  stdafx.h
Main/include/: Application.hpp  ApplicationTickable.hpp  AsyncAssetLoader.hpp  AsyncLoadable.hpp  Background.hpp  BaseGameSettingsDialog.hpp  BasicDefinitions.hpp  CalibrationScreen.hpp  Camera.hpp  ChallengeResult.hpp  ChallengeSelect.hpp  ChatOverlay.hpp  CollectionDialog.hpp  DBUpdateScreen.hpp  DownloadScreen.hpp  FilterSelection.hpp  Game.hpp  GameConfig.hpp  GameFailCondition.hpp  GameplaySettingsDialog.hpp  Gauge.hpp  GuiUtils.hpp  HitStat.hpp  IR.hpp  Input.hpp  ItemSelectionWheel.hpp  LaserTrackBuilder.hpp  LuaRequests.hpp  MultiplayerScreen.hpp  PracticeModeSettingsDialog.hpp  PreviewPlayer.hpp  Replay.hpp  ScoreScreen.hpp  Scoring.hpp  Search.hpp  SettingsPage.hpp  SettingsScreen.hpp  ShadedMesh.hpp  SkinConfig.hpp  SkinHttp.hpp  (+9 more)
Main/include/Audio/: AudioPlayback.hpp  AudioPlayback.hpp.bak  OffsetComputer.hpp
Main/include/Extras/: guicon.hpp
Main/include/FastGUI/: FastGuiGame.hpp
Main/include/Lua/: luaBindings.hpp  luaMods.hpp  luaSharedGlobals.hpp
Main/include/nuklear/: nuklear_sdl_gl3.h
Main/nuklear/: nuklear_sdl_gles2.h
Main/src/: Application.cpp  ApplicationTickable.cpp  AsyncAssetLoader.cpp  Background.cpp  BaseGameSettingsDialog.cpp  BasicDefinitions.cpp  CalibrationScreen.cpp  Camera.cpp  ChallengeResult.cpp  ChallengeSelect.cpp  ChatOverlay.cpp  CollectionDialog.cpp  DBUpdateScreen.cpp  DownloadScreen.cpp  Game.cpp  Game.cpp.bak  GameConfig.cpp  GameFailCondition.cpp  GameplaySettingsDialog.cpp  Gauge.cpp  GuiUtils.cpp  HitStat.cpp  IR.cpp  Input.cpp  LaserTrackBuilder.cpp  Main.cpp  MultiplayerScreen.cpp  PracticeModeSettingsDialog.cpp  Replay.cpp  ScoreScreen.cpp  Scoring.cpp  Scoring.cpp.bak  Search.cpp  SettingsPage.cpp  SettingsScreen.cpp  ShadedMesh.cpp  SkinConfig.cpp  SkinHttp.cpp  SkinIR.cpp  SongFilter.cpp  (+9 more)
Main/src/Audio/: AudioPlayback.cpp  AudioPlayback.cpp.bak  GameAudioEffects.cpp  OffsetComputer.cpp
Main/src/FastGUI/: FastGuiGame.cpp
Main/src/Lua/: luaBindings.cpp
Shared/: stdafx.h
Shared/src/: Bezier.cpp  BinaryStream.cpp  Buffer.cpp  Color.cpp  Config.cpp  ConfigEntry.cpp  FileStream.cpp  Interpolation.cpp  Jobs.cpp  Log.cpp  Math.cpp  MemoryStream.cpp  Path.cpp  Random.cpp  String.cpp  StringEncodingConverter.cpp  StringEncodingDetector.cpp  StringEncodingHeuristic.cpp  TextStream.cpp  Transform.cpp  UTF8.cpp  VectorMath.cpp
Tests/: stdafx.h
Tests.Game/: stdafx.h
Tests.Game/src/: GraphicsBase.cpp  GraphicsBase.hpp  Main.cpp  TestAudio.cpp  TestBeatmap.cpp  TestMusicPlayer.cpp  TestMusicPlayer.hpp
Tests.Shared/src/: Main.cpp  TestCallbacks.cpp  TestEnum.cpp  TestFilesystem.cpp  TestString.cpp  TestStringEncoding.cpp
Tests/src/: TestManager.cpp  Tests.cpp
updater/src/: Downloader.cpp  Downloader.hpp  Extractor.cpp  Extractor.hpp  updater.cpp
(+63 files in other folders)
